--- a/package.json
+++ b/package.json
@@ -46,21 +46,24 @@
     "jest-cli": "^0.4.0",
     "less": "^2.5.1",
     "less-loader": "^2.0.0",
+    "material-ui": "^0.9.1",
     "nconf": "^0.7.1",
     "node-notifier": "^4.1.0",
     "node-sass": "^3.1.2",
     "normalize.css": "^3.0.2",
     "piping": "0.1.6",
-    "react": "^0.13.1",
+    "react": "^0.13.3",
     "react-document-title": "^1.0.0",
     "react-hot-loader": "^1.1.4",
     "react-intl": "^1.1.0",
     "react-pure-render": "^1.0.1",
     "react-router": "^0.13.1",
+    "react-tap-event-plugin": "^0.1.7",
     "react-textarea-autosize": "^2.3.1",
     "run-sequence": "^1.0.2",
     "sass-loader": "^1.0.0",
     "serve-favicon": "^2.2.0",
+    "socket.io": "^1.3.5",
     "style-loader": "^0.12.0",
     "stylus-loader": "^1.0.0",
     "url-loader": "^0.5.5",
