--- a/package.json
+++ b/package.json
@@ -60,12 +60,14 @@
     "react-router": "^0.13.1",
     "react-tap-event-plugin": "^0.1.7",
     "react-textarea-autosize": "^2.3.1",
+    "rethinkdb": "^2.0.0",
     "run-sequence": "^1.0.2",
     "sass-loader": "^1.0.0",
     "serve-favicon": "^2.2.0",
     "socket.io": "^1.3.5",
     "style-loader": "^0.12.0",
     "stylus-loader": "^1.0.0",
+    "thinky": "^2.0.6",
     "url-loader": "^0.5.5",
     "validator": "^3.34.0",
     "webpack": "^1.9.5",
